--- a/assets/project.html
+++ b/assets/project.html
@@ -58,34 +58,36 @@
     <div class="container">
         <div class="second-div">
             <h3 class="text-uppercase">about appbakerz certified development specialist</h3>
-            <p class="paragraph-two">AppBakerZ Pvt. Ltd. is an organization which believes in the dignity of work. The beliefs are well translated into <br>practice. This is why
-                we recieve fruitful results at the end. Here is a brief picture of what we do. This is why
-                <br> we receive fruitful results in the end. </p>
+            <p class="paragraph-two">AppBakerZ Pvt. Ltd. is an organization which believes in the dignity of work. The beliefs are well translated into practice. This is why
+                we recieve fruitful results at the end. Here is a brief picture of what we do. This is why we receive fruitful results at the end. </p>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested front-end-development">
-                <img src=" images/html3-css3.png" alt=""/>
-                <p>FRONT-END<br>DEVELOPMENT</p>
+                <img src=" images/special-development-icons-one.png" alt=""/>
+                <p>FRONT-END DEVELOPMENT</p>
             </div>
-            <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested">
-                <img src=" images/js.png" alt=""/>
-                <p>JAVASCRIPT<br>DEVELOPMENT</p>
+            <div class="container">
+            <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
+                <img src=" images/special-development-icons-two.png" alt=""/>
+                <p>JAVASCRIPT DEVELOPMENT</p>
             </div>
-            <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 div-two-nested">
-                <img src=" images/angular.png" alt=""/>
-                <p>ANGULAR JS<br>DEVELOPMENT</p>
+            <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 div-two-nested js-dev">
+                <img src=" images/special-development-icons-three.png" alt=""/>
+                <p>ANGULAR JS DEVELOPMENT</p>
             </div>
-            <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested">
-                <img src=" images/react.png" alt=""/>
-                <p>REACT JS<br>DEVELOPMENT</p>
+            <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
+                <img src=" images/special-development-icons-four.png" alt=""/>
+                <p>REACT JS DEVELOPMENT</p>
             </div>
-            <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested">
-                <img src=" images/Api.png" alt=""/>
-                <p>API'S<br>DEVELOPMENT</p>
+            <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
+                <img src=" images/special-development-icons-five.png" alt=""/>
+                <p>API'S <br>DEVELOPMENT</p>
+            </div>
             </div>
         </div>
+    </div>
 
-
-        <div class="third-div">
-            <div class="rowWithBg">
+    <div class="third-div">
+        <div class="rowWithBg">
+            <div class="container">
                 <div class="col-lg-4 col-md-4  col-sm-12  col-xs-12">
                     <span class="course-image inline-block-elem"></span>
                     <span class="text-uppercase inline-block-elem">select course</span>
@@ -100,6 +102,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
         <div class="fourth-div">
             <h3>SEE WHAT YOU'LL LEARN</h3>
@@ -121,7 +124,7 @@
                 </button>
             </div>
         </div>
-    </div>
+
 
         <div class="fifth-div text-center">
             <div class="container-fluid">
@@ -147,13 +150,13 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 angular-js">
                         <img src="images/angularjs2.png" alt=""/>
                         <p class="container">HTML is great for declaring static documents, but it falters when we try to use it for declaring dynamic views in web-applications.
-                            AngularJS lets you extend HTML vocabulary for your application. The resulting environment is extraordinarily expressive,
+                            AngularJS lets you extend HTML vocabulary for your application. The resulting environment is extraordinarily expressive,<br>
                             readable, and quick to develop.</p>
                     </div>
 
-                    <div class="col-lg-6  col-md-12 col-sm-12 col-xs-12 displayes">
+                    <div class="col-lg-6  col-md-12 col-sm-12 col-xs-12 displayes react-js">
                         <div class="react-bg">
-                            <p class="container">React Toolbox is a set of React components that implements Material Design specification. It's built on top of some the trendiest proposals like CSS Modules.</p>
+                            <p class="container">React Toolbox is a set of <br> React components that implements <br>Material Design specification. It's<br> built on top of some the trendiest<br> proposals like CSS Modules.</p>
                             <img src="images/react2.png" alt=""/>
                         </div>
                     </div>
@@ -178,7 +181,7 @@
                         allowfullscreen></iframe>
                 <div class="col-lg-6 form-transformation">
                     <div class="form-div">
-                        <h3 class="text-uppercase">Contact Us</h3>
+                        <h1 class="text-uppercase">Contact Us</h1>
                         <div class="group">
                             <img src="images/user-icon.png" alt=""/>
                             <input type="text" placeholder="Your First Last Name"/>
@@ -201,7 +204,7 @@
         </div>
 
     <div class="details">
-            <!--<div class="row">-->
+            <div class="container">
             <div class="col-lg-3 col-lg-offset-1 col-md-4 col-sm-6 col-xs-12 text-center">
             <img src="images/phone-icon.png" alt=""/>
             <p>+92 123 4567</p>
@@ -214,7 +217,7 @@
                 <img src="images/address-locator-icon.png" alt="">
                 <p>Plot # G-762, Block A,Gulshan-e-iqbal <br>Karachi, Pakistan</p>
             </div>
-        <!--</div>-->
+        </div>
     </div>
 
     <div class="last-div">
