--- a/assets/project.html
+++ b/assets/project.html
@@ -55,6 +55,7 @@
 <!--////////////////////////// MIDDLE-->
 
 <div class="middle">
+    <div class="about-background">
     <div class="container">
         <div class="second-div">
             <h3 class="text-uppercase">about appbakerz certified development specialist</h3>
@@ -62,26 +63,27 @@
                 we recieve fruitful results at the end. Here is a brief picture of what we do. This is why we receive fruitful results at the end. </p>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested front-end-development">
                 <img src=" images/special-development-icons-one.png" alt=""/>
-                <p>FRONT-END DEVELOPMENT</p>
+                <p>FRONT-END <br> DEVELOPMENT</p>
             </div>
             <div class="container">
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
                 <img src=" images/special-development-icons-two.png" alt=""/>
-                <p>JAVASCRIPT DEVELOPMENT</p>
+                <p>JAVASCRIPT<br> DEVELOPMENT</p>
             </div>
             <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 div-two-nested js-dev">
                 <img src=" images/special-development-icons-three.png" alt=""/>
-                <p>ANGULAR JS DEVELOPMENT</p>
+                <p>ANGULAR JS<br> DEVELOPMENT</p>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
                 <img src=" images/special-development-icons-four.png" alt=""/>
-                <p>REACT JS DEVELOPMENT</p>
+                <p>REACT JS<br> DEVELOPMENT</p>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
                 <img src=" images/special-development-icons-five.png" alt=""/>
                 <p>API'S <br>DEVELOPMENT</p>
             </div>
             </div>
+        </div>
         </div>
     </div>
 
@@ -145,6 +147,7 @@
                         <img src="images/js2.png" alt=""/>
                         <p class="container">This course will teach what the most fundamental programming concepts are and how to use them. You'll learn about data
                             types, functions, loops, control flow, and objects. In the end, you'll get a chance to put everything together to build
+                            <br>
                             your own game!</p>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 angular-js">
@@ -215,7 +218,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
                 <img src="images/address-locator-icon.png" alt="">
-                <p>Plot # G-762, Block A,Gulshan-e-iqbal <br>Karachi, Pakistan</p>
+                <p>Plot # G-762, Block A, <br> Gulshan-e-iqbal Karachi, Pakistan</p>
             </div>
         </div>
     </div>
