--- a/assets/project.html
+++ b/assets/project.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 </head>
+<body>
 <!--/////////////////////// HEADER-->
 
 <!--<div class="container">-->
@@ -55,6 +56,7 @@
 <!--////////////////////////// MIDDLE-->
 
 <div class="middle">
+
     <div class="about-background">
     <div class="container">
         <div class="second-div">
@@ -63,26 +65,26 @@
                 we recieve fruitful results at the end. Here is a brief picture of what we do. This is why we receive fruitful results at the end. </p>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested front-end-development">
                 <img src=" images/special-development-icons-one.png" alt=""/>
-                <p>FRONT-END <br> DEVELOPMENT</p>
+                <p class="caption">FRONT-END <br> DEVELOPMENT</p>
             </div>
-            <div class="container">
+            <!--<div class="container">-->
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
                 <img src=" images/special-development-icons-two.png" alt=""/>
-                <p>JAVASCRIPT<br> DEVELOPMENT</p>
+                <p class="caption">JAVASCRIPT<br> DEVELOPMENT</p>
             </div>
             <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 div-two-nested js-dev">
                 <img src=" images/special-development-icons-three.png" alt=""/>
-                <p>ANGULAR JS<br> DEVELOPMENT</p>
+                <p class="caption">ANGULAR JS<br> DEVELOPMENT</p>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
                 <img src=" images/special-development-icons-four.png" alt=""/>
-                <p>REACT JS<br> DEVELOPMENT</p>
+                <p class="caption">REACT JS<br> DEVELOPMENT</p>
             </div>
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">
                 <img src=" images/special-development-icons-five.png" alt=""/>
-                <p>API'S <br>DEVELOPMENT</p>
+                <p class="caption">API'S <br>DEVELOPMENT</p>
             </div>
-            </div>
+            <!--</div>-->
         </div>
         </div>
     </div>
@@ -106,7 +108,7 @@
         </div>
     </div>
 
-        <div class="fourth-div">
+    <div class="fourth-div">
             <h3>SEE WHAT YOU'LL LEARN</h3>
             <div class="accordian-courses">
                 <button class="accordian dropdown-transformation bg-one">FRONT END DEVELOPMENT SPECIALIST
@@ -128,7 +130,7 @@
         </div>
 
 
-        <div class="fifth-div text-center">
+    <div class="fifth-div text-center">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 displayes">
@@ -147,8 +149,7 @@
                         <img src="images/js2.png" alt=""/>
                         <p class="container">This course will teach what the most fundamental programming concepts are and how to use them. You'll learn about data
                             types, functions, loops, control flow, and objects. In the end, you'll get a chance to put everything together to build
-                            <br>
-                            your own game!</p>
+                            <br>your own game!</p>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 angular-js">
                         <img src="images/angularjs2.png" alt=""/>
@@ -156,7 +157,6 @@
                             AngularJS lets you extend HTML vocabulary for your application. The resulting environment is extraordinarily expressive,<br>
                             readable, and quick to develop.</p>
                     </div>
-
                     <div class="col-lg-6  col-md-12 col-sm-12 col-xs-12 displayes react-js">
                         <div class="react-bg">
                             <p class="container">React Toolbox is a set of <br> React components that implements <br>Material Design specification. It's<br> built on top of some the trendiest<br> proposals like CSS Modules.</p>
@@ -172,9 +172,6 @@
                 </div>
             </div>
         </div>
-</div>
-            <!--</div>-->
-        <!--</div>-->
 
     <div class="container-fluid">
             <div class="row map">
@@ -252,9 +249,7 @@
         </div>
     </div>
 
-<!--</div>-->
-
-<!--</div>-->
+</div>
 
 <!--///////////////////////////// FOOTER-->
 <footer>
