04-04-17 complete and reNewing code......

--- a/project.html
+++ b/project.html
@@ -245,18 +245,10 @@
                 </div>
             </div>
             <div  class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
-                <!--<img src="images/fb-icon-last.png" class="social-media-icons" alt="fb-icon"/>-->
-                <i class="fa fa-facebook-official" class="social-media-icons" aria-hidden="true"></i>
-
-                <!--<img src="images/g+icon-last.png" class="social-media-icons" alt="google-plus-icon"/>-->
-                <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-
-                <!--<img src="images/twitter-icon-last.png" class="social-media-icons" alt="twitter-icon"/>-->
-                <i class="fa fa-twitter-square" aria-hidden="true"></i>
-
-                <!--<img src="images/youtube-icon-last.png" class="social-media-icons" alt="youtube-icon"/>-->
-                <i class="fa fa-youtube-square" aria-hidden="true"></i>
-
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
             </div>
         </div>
     </div>
