--- a/home1.html
+++ b/home1.html
@@ -273,116 +273,148 @@
         <div class="container">
             <h1 class="text-uppercase text-center">create your own course</h1>
             <div>
-                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-offset-1 col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="checkbox">
                         <input type="checkbox" id="multipleSelectedBox01" />
-                        <label for="multipleSelectedBox01">JavaScript Development</label>
+                        <label for="multipleSelectedBox01" class="text-capitalize">javascript development</label>
                     </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="checkbox">
                         <input type="checkbox" id="multipleSelectedBox02" />
-                        <label for="multipleSelectedBox02">Meteor Development</label>
-                    </div>
-                    <div class="checkbox-hidden">
-                        <input type="checkbox" id="multipleSelectedBox03" />
-                        <label for="multipleSelectedBox03">Wordpress Development</label>
-                    </div>
-                    <div class="checkbox-hidden">
-                        <input type="checkbox" id="multipleSelectedBox04" />
-                        <label for="multipleSelectedBox04">Wordpress Development</label>
-                    </div>
-                    <div class="checkbox-hidden">
-                        <input type="checkbox" id="multipleSelectedBox05" />
-                        <label for="multipleSelectedBox05">Wordpress Development</label>
+                        <label for="multipleSelectedBox02" class="text-capitalize">meteor development</label>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="checkbox ">
+                        <input type="checkbox" id="multipleSelectedBox03" />
+                        <label for="multipleSelectedBox03" class="text-capitalize">wordpress development</label>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="checkbox">
+                        <input type="checkbox" id="multipleSelectedBox04" />
+                        <label for="multipleSelectedBox04" class="text-capitalize">wordpress development</label>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="checkbox">
+                        <input type="checkbox" id="multipleSelectedBox05" />
+                        <label for="multipleSelectedBox05" class="text-capitalize">wordpress development</label>
+                    </div>
+                </div>
+                <!--////////-->
+
+                <div class="col-lg-offset-1 col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox06" />
-                        <label for="multipleSelectedBox06">HTML/CSS</label>
+                        <label for="multipleSelectedBox06" class="text-uppercase">html/css</label>
                     </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox07" />
-                        <label for="multipleSelectedBox07">Hybrid Apps</label>
-                    </div>
-                    <div class="text-center checkbox-hidden">
-                        <input type="checkbox" id="multipleSelectedBox08" />
-                        <label for="multipleSelectedBox08">JQuery</label>
-                    </div>
-                    <div class="text-center checkbox-hidden">
-                        <input type="checkbox" id="multipleSelectedBox09" />
-                        <label for="multipleSelectedBox09">JQuery</label>
-                    </div>
-                    <div class="text-center checkbox-hidden">
-                        <input type="checkbox" id="multipleSelectedBox10" />
-                        <label for="multipleSelectedBox10">JQuery</label>
+                        <label for="multipleSelectedBox07" class="text-capitalize">hybrid apps</label>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="text-center checkbox">
+                        <input type="checkbox" id="multipleSelectedBox08" />
+                        <label for="multipleSelectedBox08" class="text-capitalize">jQuery</label>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="text-center checkbox">
+                        <input type="checkbox" id="multipleSelectedBox09" />
+                        <label for="multipleSelectedBox09" class="text-capitalize">jQuery</label>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6  checkbox-hidden">
+                    <div class="text-center checkbox">
+                        <input type="checkbox" id="multipleSelectedBox10" />
+                        <label for="multipleSelectedBox10" class="text-capitalize">jQuery</label>
+                    </div>
+                </div>
+                <!--///////////-->
+
+                <div class="col-lg-offset-1 col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox11" />
-                        <label for="multipleSelectedBox11">Bootstrap Framework</label>
+                        <label for="multipleSelectedBox11" class="text-capitalize">bootstrap framework</label>
                     </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox12" />
-                        <label for="multipleSelectedBox12">Angular Js Development</label>
+                        <label for="multipleSelectedBox12" class="text-capitalize">angular js development</label>
                     </div>
-                    <div class="text-center checkbox-hidden">
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox13" />
-                        <label for="multipleSelectedBox13">React Js Development</label>
+                        <label for="multipleSelectedBox13" class="text-capitalize">react js development</label>
                     </div>
-                    <div class="text-center checkbox-hidden">
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 checkbox-hidden">
+                    <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox14" />
-                        <label for="multipleSelectedBox14">React Js Development</label>
+                        <label for="multipleSelectedBox14" class="text-capitalize">react js development</label>
                     </div>
-                    <div class="text-center checkbox-hidden">
+                </div>
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6  checkbox-hidden">
+                    <div class="text-center checkbox">
                         <input type="checkbox" id="multipleSelectedBox15" />
-                        <label for="multipleSelectedBox15">React Js Development</label>
+                        <label for="multipleSelectedBox15" class="text-capitalize">react js development</label>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6">
-                    <div class="checkbox checkbox-extra">
+                <!--///////////////////////-->
+
+                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6 checkbox-extra">
+                    <div class="checkbox">
                         <input type="checkbox" id="multipleSelectedBox16" />
-                        <label for="multipleSelectedBox16">Wordpress Development</label>
+                        <label for="multipleSelectedBox16" class="text-capitalize">wordpress development</label>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6">
-                    <div class="checkbox checkbox-extra">
+
+                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6 checkbox-extra">
+                    <div class="checkbox">
                         <input type="checkbox" id="multipleSelectedBox17" />
-                        <label for="multipleSelectedBox17">Wordpress Development</label>
+                        <label for="multipleSelectedBox17" class="text-capitalize">wordpress development</label>
                     </div>
                 </div>
-                <div class="col-xs-offset-3 col-lg-12 col-md-6 col-sm-6 col-xs-6">
-                    <div class="checkbox checkbox-extra">
+
+                <div class="col-xs-offset-3 col-lg-12 col-md-6 col-sm-6 col-xs-6 checkbox-extra">
+                    <div class="checkbox text-center">
                         <input type="checkbox" id="multipleSelectedBox18" />
-                        <label for="multipleSelectedBox18">JQuery</label>
+                        <label for="multipleSelectedBox18" class="text-capitalize text-center">jQuery</label>
                     </div>
                 </div>
 
                 <div class="col-lg-10 col-lg-offset-1">
-                <div class="prerequisites-column pull-left">
+                    <div class="prerequisites-column pull-left">
 
-                    <div class="html-css">
-                        <h2>PREREQUISITES</h2>
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>HTML/CSS</li>
-                            <li>HTML/CSS</li>
-                        </ul>
-                    </div>
-                    <div class="html-css">
-                        <ul>
-                            <li>HTML/CSS</li>
-                            <li>HTML/CSS</li>
-                            <li>HTML/CSS</li>
-                        </ul>
-                    </div>
-                    <div class="courses-duration">
-                        <h2>COURSE DURATION</h2>
-                        <p>9 Months</p>
-                        <button class="btn">ENROLL NOW</button>
+                        <div class="html-css">
+                            <h2>PREREQUISITES</h2>
+                            <ul>
+                                <li>HTML/CSS</li>
+                                <li>HTML/CSS</li>
+                                <li>HTML/CSS</li>
+                            </ul>
+                        </div>
+                        <div class="html-css">
+                            <ul>
+                                <li>HTML/CSS</li>
+                                <li>HTML/CSS</li>
+                                <li>HTML/CSS</li>
+                            </ul>
+                        </div>
+                        <div class="courses-duration">
+                            <h2>COURSE DURATION</h2>
+                            <p>9 Months</p>
+                            <button class="btn">ENROLL NOW</button>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
         </div>
 
@@ -498,22 +530,22 @@
 
             <ul class="flex-container">
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
-                <li class="hidden-lg">
+                <li class="hidden-lg hidden-md">
                     <img src="assets/images/derby-lang.png" class="image-transform"/>
                 </li>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
-                <li class="hidden-lg">
+                <li class="hidden-lg hidden-md">
                     <img src="assets/images/api-lang.png" class="image-transform"/>
                 </li>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
-                <li class="hidden-lg">
+                <li class="hidden-lg hidden-md">
                     <img src="assets/images/php-lang.png" class="image-transform"/>
                 </li>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
-                <li class="hidden-lg">
+                <li class="hidden-lg hidden-md">
                     <img src="assets/images/react-lang.png" class="image-transform"/>
                 </li>
             </div>
@@ -538,49 +570,49 @@
         <div class="container">
             <div class="row">
                 <h3 class="text-center">RECENT EVENTS</h3>
-                <div class="col-md-4 col-sm-4 col-xs-4">
-                    <div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="hidden-sm hidden-xs">
                         <img src="assets/images/annual-wordpress-event.png" alt="">
                     </div>
-                    <div class="spacing">
+                    <div class="hidden-sm hidden-xs spacing">
                         <h4 class="text-uppercase">annual wordpress <br> meetup</h4>
-                        <p>Education is the process of facilitating learning. Knowledge, skills, values . . . </p>
-                <span>
-                    <i class="fa fa-eye">667</i>
-                </span>
-                <span>
-                    <i class="fa fa-comments-o">113</i>
-                </span>
+                        <p>Education is the process of facilitating <br> learning. Knowledge, skills, values . . . </p>
+                        <span>
+                            <i class="fa fa-eye">667</i>
+                        </span>
+                        <span>
+                            <i class="fa fa-comments-o">113</i>
+                        </span>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-4">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div>
                         <img src="assets/images/hybrid-app-dev-event.png" alt="">
                     </div>
                     <div class="spacing">
                         <h4 class="text-uppercase">hybrid app development training session</h4>
-                        <p>Education is the process of facilitating learning. Knowledge, skills, values . . . </p>
-                <span>
-                    <i class="fa fa-eye">667</i>
-                </span>
-                <span>
-                    <i class="fa fa-comments-o">113</i>
-                </span>
+                        <p>Education is the process of facilitating <br> learning. Knowledge, skills, values . . . </p>
+                        <span>
+                            <i class="fa fa-eye">667</i>
+                        </span>
+                        <span>
+                            <i class="fa fa-comments-o">113</i>
+                        </span>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 col-xs-4">
-                    <div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="hidden-sm hidden-xs">
                         <img src="assets/images/annual-freelance-event.png" alt="">
                     </div>
-                    <div class="spacing">
+                    <div class="hidden-sm hidden-xs spacing">
                         <h4 class="text-uppercase">anual upwork <br> freelancers meetup</h4>
-                        <p>Education is the process of facilitating learning. Knowledge, skills, values . . . </p>
-                <span>
-                    <i class="fa fa-eye">667</i>
-                </span>
-                <span>
-                    <i class="fa fa-comments-o">113</i>
-                </span>
+                        <p>Education is the process of facilitating <br> learning. Knowledge, skills, values . . . </p>
+                        <span>
+                            <i class="fa fa-eye">667</i>
+                        </span>
+                        <span>
+                            <i class="fa fa-comments-o">113</i>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -656,17 +688,10 @@ AppBakerZ+Pvt.+Ltd.!5e0!3m2!1sen!2s!4v1489401838963" width="100%" height="773" f
                 </div>
             </div>
             <div  class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center">
-                <!--<img src="images/fb-icon-last.png" class="social-media-icons" alt="fb-icon"/>-->
-                <i class="fa fa-facebook-official" class="social-media-icons" aria-hidden="true"></i>
-
-                <!--<img src="images/g+icon-last.png" class="social-media-icons" alt="google-plus-icon"/>-->
-                <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-
-                <!--<img src="images/twitter-icon-last.png" class="social-media-icons" alt="twitter-icon"/>-->
-                <i class="fa fa-twitter-square" aria-hidden="true"></i>
-
-                <!--<img src="images/youtube-icon-last.png" class="social-media-icons" alt="youtube-icon"/>-->
-                <i class="fa fa-youtube-square" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
 
             </div>
         </div>
