commit changes & task complete.

--- a/home1.html
+++ b/home1.html
@@ -83,7 +83,7 @@
     <!--////////// ABOUT SECTION//////////-->
     <div class="about-us">
         <div class="container">
-            <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12 about-text">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 about-text">
                 <h2 class="container about-heading">ABOUT APPBAKERZ ACADEMY</h2>
                 <p class="container about-paragraph">AppBakerZ Pvt. Ltd. is an organization which believes in the dignity of work.
                     The beliefs are well translated into practice. This is why we receive fruitful
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="hybrid-course-section">
                         <img class="apps-icons" src="assets/images/angular-course.png" alt=""/>
                         <img class="apps-icons" src="assets/images/api-hybrid-course.png" alt=""/>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="meteor-course-section">
                         <img class="apps-icons" src="assets/images/meteor-course.png" alt="">
                         <img class="apps-icons" src="assets/images/mongo-db-course.png" alt=""/>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="desktop-course-section">
                         <img class="apps-icons" src="assets/images/js-course.png" alt="">
                         <img class="apps-icons" src="assets/images/meteor-course.png" alt="">
@@ -199,7 +199,7 @@
                 </div>
             </div>
             <div class="short-courses">
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div class="machine-lang-short-course-section">
                         <h5 class="text-uppercase">short course</h5>
                         <h3>MACHINE LANGUAGE </h3>
@@ -207,7 +207,7 @@
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div class="mean-stack-short-course-section">
                         <h5 class="text-uppercase">short course</h5>
                         <h3>MEAN STACK DEVELOPMENT </h3>
@@ -215,7 +215,7 @@
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div class="hybrid-apps-short-course-section">
                         <h5 class="text-uppercase">short course</h5>
                         <h3>HYBRID APP DEVELOPMENT </h3>
@@ -223,7 +223,7 @@
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div class="reactjs-short-course-section-hidden">
                         <h5 class="text-uppercase">short course</h5>
                         <h3 class="text-uppercase">react js development </h3>
@@ -231,7 +231,7 @@
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div class="api-short-course-section-hidden">
                         <h5 class="text-uppercase">short course</h5>
                         <h3>API'S DEVELOPMENT </h3>
@@ -239,7 +239,7 @@
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
                     <div class="info-tech-short-course-section-hidden">
                         <h5 class="text-uppercase">short course</h5>
                         <h3>INFORMATION TECHNOLOGY </h3>
@@ -269,7 +269,7 @@
     <div class="create-courses">
         <div class="container">
             <h1 class="text-uppercase text-center">create your own course</h1>
-            <div>
+
                 <div class="col-lg-offset-1 col-lg-2 col-md-6 col-sm-6 col-xs-6">
                     <div class="checkbox">
                         <input type="checkbox" id="multipleSelectedBox01" />
@@ -372,14 +372,12 @@
                         <label for="multipleSelectedBox16" class="text-capitalize">wordpress development</label>
                     </div>
                 </div>
-
                 <div class="col-lg-12 col-md-6 col-sm-6 col-xs-6 checkbox-extra">
                     <div class="checkbox">
                         <input type="checkbox" id="multipleSelectedBox17" />
                         <label for="multipleSelectedBox17" class="text-capitalize">wordpress development</label>
                     </div>
                 </div>
-
                 <div class="col-xs-offset-3 col-lg-12 col-md-6 col-sm-6 col-xs-6 checkbox-extra">
                     <div class="checkbox text-center">
                         <input type="checkbox" id="multipleSelectedBox18" />
@@ -412,7 +410,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
         </div>
 
     </div>
@@ -567,7 +565,7 @@
         <div class="container">
             <div class="row">
                 <h3 class="text-center">RECENT EVENTS</h3>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <div class="hidden-sm hidden-xs">
                         <img src="assets/images/annual-wordpress-event.png" alt="">
                     </div>
@@ -582,11 +580,11 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class="hidden-md">
                         <img src="assets/images/hybrid-app-dev-event.png" alt="">
                     </div>
-                    <div class="spacing">
+                    <div class="spacing hidden-md">
                         <h4 class="text-uppercase">hybrid app development training session</h4>
                         <p>Education is the process of facilitating <br> learning. Knowledge, skills, values . . . </p>
                         <span>
@@ -597,7 +595,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <div class="hidden-sm hidden-xs">
                         <img src="assets/images/annual-freelance-event.png" alt="">
                     </div>
