--- a/coursePage.html
+++ b/coursePage.html
@@ -199,11 +199,11 @@
                 <img src="assets/images/qualification-icon.png" alt="">
                 <input type="text" name="usr-name" placeholder="Your Education" />
             </div>
-            <div class="col-lg-offset-3 col-lg-5 col-md-6 col-sm-6 col-xs-6">
+            <div class="col-lg-offset-3 col-lg-5 col-md-6 col-sm-offset-3 col-sm-6 col-xs-6">
                 <img src="assets/images/timer-icon.png" alt="">
                 <input type="text" name="usr-name" placeholder="Preferred Timing" />
             </div>
-            <div class="col-lg-offset-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="col-lg-offset-3 col-lg-6 col-md-12 col-sm-offset-3 col-sm-6 col-xs-12">
                 <button class="btn text-center text-uppercase" onClick="alert('You Are Now Enrolled For Certified Development Course')" >
                     enroll now
                 </button>
