--- a/wordpressPage.html
+++ b/wordpressPage.html
@@ -12,7 +12,7 @@
 
 <!--/////////////// HEADER///////////-->
 <header>
-    <div class="home-header">
+    <div class="desktop-home-header">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -62,31 +62,11 @@
                 <h3 class="text-uppercase">about wordpress apps development specialist</h3>
                 <p class="about-us-paragraph">AppBakerZ Pvt. Ltd. is an organization which believes in the dignity of work. The beliefs are well translated into practice. This is why
                     we recieve fruitful results at the end. Here is a brief picture of what we do. This is why we receive fruitful results at the end. </p>
-                <!--<div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested front-end-development">-->
-                    <!--<img src="assets/images/special-development-icons-one.png" alt=""/>-->
-                    <!--<p class="caption">FRONT-END <br> DEVELOPMENT</p>-->
-                <!--</div>-->
-                <!--<div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">-->
-                    <!--<img src="assets/images/special-development-icons-two.png" alt=""/>-->
-                    <!--<p class="caption">JAVASCRIPT<br> DEVELOPMENT</p>-->
-                <!--</div>-->
-                <!--<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 div-two-nested js-dev">-->
-                    <!--<img src="assets/images/special-development-icons-three.png" alt=""/>-->
-                    <!--<p class="caption">ANGULAR JS<br> DEVELOPMENT</p>-->
-                <!--</div>-->
-                <!--<div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">-->
-                    <!--<img src="assets/images/special-development-icons-four.png" alt=""/>-->
-                    <!--<p class="caption">REACT JS<br> DEVELOPMENT</p>-->
-                <!--</div>-->
-                <!--<div class="col-lg-2 col-md-6 col-sm-6 col-xs-6 div-two-nested js-dev">-->
-                    <!--<img src="assets/images/special-development-icons-five.png" alt=""/>-->
-                    <!--<p class="caption">API'S <br>DEVELOPMENT</p>-->
-                <!--</div>-->
-            <!--</div>-->
                 <div class="col-lg-12 col-md-12 c0l-sm-12 c0l-xs-12">
-                    <img src="assets/images/meteor-center.png" alt="">
-                    <p class="meteor-text">Meteor <br>Development</p>
+                    <img src="assets/images/meteor1.png" alt="">
+                    <p class="meteor-text text-uppercase">meteor <br>development</p>
                 </div>
+            </div>
         </div>
     </div>
     <!--//ABOUT SECTION END//-->
@@ -135,51 +115,23 @@
     </div>
     <!--COURSE SELECTION SECTION END-->
 
-    <!--HTML5 TO CORDOVA DESCRIPTION SECTION-->
-    <div class="fifth-div text-center">
+    <!--METEOR DESCRIPTION SECTION-->
+    <div class="meteor-details text-center">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 displayes">
-                    <div class="color-orange">
-                        <p class="container">HTML5 is a core technology markup language of the Internet used for structuring and presenting content for the World Wide Web.</p>
-                        <img src="assets/images/html5.png" alt=""/>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 displayes" >
-                    <div class="css-three">
-                        <img src="assets/images/css3.png" alt=""/>
-                        <p class="container">HTML5 is a core technology markup language of the Internet used for structuring and presenting content for the World Wide Web.</p>
-                    </div>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 java-sc">
-                    <img src="assets/images/js2.png" alt=""/>
-                    <p class="container">This course will teach what the most fundamental programming concepts are and how to use them. You'll learn about data
-                        types, functions, loops, control flow, and objects. In the end, you'll get a chance to put everything together to build
-                        <br>your own game!</p>
-                </div>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 angular-js">
-                    <img src="assets/images/angularjs2.png" alt=""/>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 displayes">
+                <div class="colorOnBg">
+                    <img src="assets/images/meteor.png" alt=""/>
                     <p class="container">HTML is great for declaring static documents, but it falters when we try to use it for declaring dynamic views in web-applications.
-                        AngularJS lets you extend HTML vocabulary for your application. The resulting environment is extraordinarily expressive,<br>
+                        AngularJS lets you extend HTML vocabulary for your application. The resulting environment is extraordinarily expressive,
                         readable, and quick to develop.</p>
-                </div>
-                <div class="col-lg-6  col-md-12 col-sm-12 col-xs-12 displayes react-js">
-                    <div class="react-bg">
-                        <p class="container">React Toolbox is a set of <br> React components that implements <br>Material Design specification. It's<br> built on top of some the trendiest<br> proposals like CSS Modules.</p>
-                        <img src="assets/images/react2.png" alt=""/>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 displayes" >
-                    <div class="css-three">
-                        <img src="assets/images/apis2.png" alt=""/>
-                        <p class="container">Cordova command-line runs on Node.js and is available on NPM. Follow platform specific guides to install additional platform dependencies</p>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--HTML5 TO CORDOVA DESCRIPTION SECTION END-->
 </div>
+
+    <!--METEOR ESCRIPTION SECTION END-->
+
 
 <!--///////////// FOOTER////////////////-->
 
