--- a/wordpressMeetup.html
+++ b/wordpressMeetup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WORDPRESS ANNUAL MEETUP</title>
+    <title>Wordpress Annual Meetup</title>
     <link rel="stylesheet" href="assets/SASS/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -65,12 +65,14 @@
                 <p class="container simple-paragraph">
                     Basic info comes here.Basic info comes here.  Basic info comes here.Basic info comes here.
                 </p>
-                    <span>Basic info comes here.Basic info comes here. Basic info comes here.Basic info comes here.
+                <span class="hidden-xs hidden-sm">
+                    Basic info comes here.Basic info comes here. Basic info comes here.Basic info comes here.
                     Basic info comes here.Basic info comes here. Basic info comes here.Basic info comes here.
                     Basic info comes here.Basic info comes here.Basic info comes here.Basic info comes here
                     Basic info comes here.Basic info comes here.  Basic info comes here.Basic info comes here.
                     Basic info comes here.Basic info comes here. Basic info comes here.Basic info comes <br> here.
-                    Basic info comes here. Basic info comes here.. </span>
+                    Basic info comes here. Basic info comes here..
+                </span>
 
             </div>
         </div>
