--- a/coursePage.html
+++ b/coursePage.html
@@ -12,7 +12,7 @@
 
 <!--/////////////// HEADER///////////-->
 <header>
-    <div class="home-header">
+    <div class="header-bg">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -183,28 +183,28 @@
     <div class="enroll-background">
         <div class="container">
             <h3 class="text-uppercase text-center">enroll now for acds</h3>
-            <div class="col-lg-offset-1 col-lg-5 col-md-6 col-sm-6 col-xs-6">
+            <div class="col-lg-offset-1 col-lg-5 col-md-6 col-sm-6 col-xs-12">
                 <img src="assets/images/usr-icon-.png" alt="">
                 <input type="text" name="usr-name" placeholder=" Your Name"/>
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6">
+            <div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
                 <img src="assets/images/mail-add-icon.png" alt="">
                 <input type="text" name="usr-name" placeholder="Email Address"/>
             </div>
-            <div class="col-lg-offset-1 col-lg-5 col-md-6 col-sm-6 col-xs-6">
+            <div class="col-lg-offset-1 col-lg-5 col-md-6 col-sm-6 col-xs-12">
                 <img src="assets/images/contact-icon.png" alt="">
                 <input type="text" name="usr-name" placeholder="Contact Number" />
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-6 col-xs-6">
+            <div class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
                 <img src="assets/images/qualification-icon.png" alt="">
                 <input type="text" name="usr-name" placeholder="Your Education" />
             </div>
-            <div class="col-lg-offset-3 col-lg-5 col-md-6 col-sm-offset-3 col-sm-6 col-xs-6">
+            <div class="col-lg-offset-3 col-lg-5 col-md-6 col-sm-offset-3 col-sm-6 col-xs-12">
                 <img src="assets/images/timer-icon.png" alt="">
-                <input type="text" name="usr-name" placeholder="Preferred Timing" />
+                <input type="text" name="usr-name" placeholder="Preferred Timing"/><img class="select-icon" src="assets/images/select-box-icon.png" alt="">
             </div>
             <div class="col-lg-offset-3 col-lg-6 col-md-12 col-sm-offset-3 col-sm-6 col-xs-12">
-                <button class="btn text-center text-uppercase" onClick="alert('You Are Now Enrolled For Certified Development Course')" >
+                <button class="btn text-center text-uppercase">
                     enroll now
                 </button>
             </div>
