--- a/enrollPage.html
+++ b/enrollPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ENROLL Page1</title>
+    <title>ENROLL Page</title>
     <link rel="stylesheet" href="assets/SASS/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -23,7 +23,6 @@
                     </button>
                     <a class="navbar-brand" href="#"><img src="assets/images/app-logo.png" class="logo-top" alt="AppBakerzLogo"/></a>
                 </div> <!--///// .navbar-header-->
-
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#">HOME</a></li>
@@ -34,7 +33,6 @@
                         <li><a href="#">CONTACT</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
-
                 <div class="clock pull-right">
                     <img src="assets/images/clock-icon.png" alt=""/>
                     <p>Saturday - Sunday CLOSED<br>
@@ -43,46 +41,17 @@
                 </div>
             </div><!--/.container-fluid -->
         </nav>
-
         <div class="main-heading">
             <h1 class="container">get yourself <br> enrolled</h1>
-            <div class="special-development-icons">
-                <div class="col-lg-12 col-md-12">
-                    <div class="col-lg-offset-1 col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested front-end-development">
-                        <img src="assets/images/html-css-icons.png" alt=""/>
-                        <p class="caption">FRONT-END <br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                        <img src="assets/images/javascript-icon.png" alt=""/>
-                        <p class="caption">JAVASCRIPT<br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                        <img src="assets/images/angular-icon.png" alt=""/>
-                        <p class="caption">ANGULAR JS<br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                        <img src="assets/images/react-main-icon.png" alt=""/>
-                        <p class="caption">REACT JS<br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 col-lg-offset-1 div-two-nested js-dev">
-                        <img src="assets/images/api-icon.png" alt=""/>
-                        <p class="caption">API'S <br>DEVELOPMENT</p>
-                    </div>
-                </div>
-            </div>
             <button class="btn btn-default"> ENROLL NOW</button>
         </div>
-
-
-
-
     </div>
 </header>
 
 <content>
     <!--////////// ABOUT SECTION//////////-->
     <div class="about-us">
-        <div class="container">
+        <div class="container md-screen">
             <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-offset-1 col-xs-6 form-transform-marginControl ">
                 <img src="assets/images/enroll-usr-icon.png" class="icons"/>
                 <input type="text" placeholder="Your Name" class="form-transform"/>
@@ -98,7 +67,6 @@
 
                 <img src="assets/images/enroll-education-icon.png" class="icons"/>
                 <input type="text" placeholder="Your Education" class="form-transform" />
-
                 <button class="btn btn-primary">SUBMIT</button>
             </div>
             <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -298,8 +266,8 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="hidden-md">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-3 col-xs-12 hidden-md">
+                    <div>
                         <img src="assets/images/hybrid-app-dev-event.png" alt="">
                     </div>
                     <div class="spacing hidden-md">
