--- a/project.html
+++ b/project.html
@@ -51,9 +51,7 @@
     </div>
 </header>
 <!--//////////////HEADER END/////////-->
-
 <!--////////////// CONTENT //////////////-->
-
 <div class="middle">
     <!--//ABOUT SECTION//-->
     <div class="about-background-image">
@@ -176,7 +174,7 @@
     </div>
     <!--HTML5 TO CORDOVA DESCRIPTION SECTION END-->
 </div>
-
+<!--//////////////CONTENT END/////////-->
 <!--///////////// FOOTER////////////////-->
 <footer>
     <!--MAP AND CONTACT SECTION-->
@@ -260,8 +258,10 @@
 </footer>
 <!--//////////////FOOTER END//////////-->
 
+<!--//////////////SCRIPT//////////-->
 <script src="assets/javascripts/jquery-3.1.1.min.js"></script>
 <script src="assets/javascripts/bootstrap.min.js"></script>
+<!--///////////////////-->
 
 </body>
 </html>
