--- a/wordpressPage.html
+++ b/wordpressPage.html
@@ -62,8 +62,8 @@
                 <h3 class="text-uppercase">about wordpress apps development specialist</h3>
                 <p class="about-us-paragraph">AppBakerZ Pvt. Ltd. is an organization which believes in the dignity of work. The beliefs are well translated into practice. This is why
                     we recieve fruitful results at the end. Here is a brief picture of what we do. This is why we receive fruitful results at the end. </p>
-                <div class="col-lg-12 col-md-12 c0l-sm-12 c0l-xs-12">
-                    <img src="assets/images/meteor1.png" alt="">
+                <div class="col-lg-12 col-md-12 c0l-sm-12 c0l-xs-12 about-meteor">
+                    <a href="#"><img src="assets/images/meteor1.png" alt=""></a>
                     <p class="meteor-text text-uppercase">meteor <br>development</p>
                 </div>
             </div>
@@ -130,7 +130,7 @@
     </div>
 </div>
 
-    <!--METEOR ESCRIPTION SECTION END-->
+<!--METEOR ESCRIPTION SECTION END-->
 
 
 <!--///////////// FOOTER////////////////-->
