--- a/enrollPageOne.html
+++ b/enrollPageOne.html
@@ -46,77 +46,38 @@
 
         <div class="main-heading">
             <h1 class="container">get yourself <br> enrolled</h1>
-            <div class="special-development-icons">
-                <div class="col-lg-12 col-md-12">
-                    <div class="col-lg-offset-1 col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested front-end-development">
-                        <img src="assets/images/html-css-icons.png" alt=""/>
-                        <p class="caption">FRONT-END <br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                        <img src="assets/images/javascript-icon.png" alt=""/>
-                        <p class="caption">JAVASCRIPT<br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                        <img src="assets/images/angular-icon.png" alt=""/>
-                        <p class="caption">ANGULAR JS<br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                        <img src="assets/images/react-main-icon.png" alt=""/>
-                        <p class="caption">REACT JS<br> DEVELOPMENT</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 col-lg-offset-1 div-two-nested js-dev">
-                        <img src="assets/images/api-icon.png" alt=""/>
-                        <p class="caption">API'S <br>DEVELOPMENT</p>
-                    </div>
-                </div>
-            </div>
             <button class="btn btn-default"> ENROLL NOW</button>
         </div>
-
-
-
-
     </div>
 </header>
 
 <content>
     <!--////////// ABOUT SECTION//////////-->
     <div class="about-us">
-        <div class="container">
-            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-12 marginControl ">
+        <div class="container about-sec">
+            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-8 col-xs-offset-1 marginControl ">
                 <img src="assets/images/enroll-usr-icon.png" class="icons"/>
                 <input type="text" placeholder="Your Name" class="form-transform"/>
             </div>
-            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-12 marginControl">
+            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-8 col-xs-offset-1 marginControl">
                 <img src="assets/images/enroll-mail-icon.png" class="icons"/>
                 <input type="email" placeholder="Email Address" class="form-transform" />
             </div>
-            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-12 marginControl">
+            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-8 col-xs-offset-1 marginControl">
                 <img src="assets/images/enroll-contact-icon.png" class="icons"/>
                 <input type="text" placeholder="Contact Number" class="form-transform" />
             </div>
-            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-12 marginControl">
+            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-8 col-xs-offset-1 marginControl">
                 <img src="assets/images/enroll-education-icon.png" class="icons"/>
                 <input type="text" placeholder="Your Education" class="form-transform" />
             </div>
-            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-12 marginControl">
+            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-8 col-xs-offset-1 marginControl">
                 <img src="assets/images/enroll-course-icon.png" class="icons"/>
                 <input type="text" placeholder="Select Course" class="form-transform"/>
             </div>
-
-
-
-            <!--<div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-offset-1 col-xs-6 marginControl">-->
-                <!--<img src="assets/images/enroll-education-icon.png" class="icons"/>-->
-                <!--<input type="text" placeholder="Your Education" class="form-transform" />-->
-            <!--</div>-->
-
-            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-offset-3 col-xs-6 marginControl">
+            <div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-8 col-xs-offset-1 marginControl">
                 <button class="btn btn-primary">SUBMIT</button>
             </div>
-            <!--<div class="col-lg-offset-0 col-lg-6 col-md-6 col-sm-6 col-xs-offset-3 col-xs-6 ">-->
-                <!--<img src="assets/images/AcademyChef.png" class="academy-chef"/>-->
-            <!--</div>-->
         </div>
     </div>
     <!--////////////////ABOUT SECTION END ///////-->
@@ -311,8 +272,8 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="hidden-md">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-sm-offset-3 col-xs-12 hidden-md">
+                    <div>
                         <img src="assets/images/hybrid-app-dev-event.png" alt="">
                     </div>
                     <div class="spacing hidden-md">
