--- a/home1.html
+++ b/home1.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Home ACDS</title>
+
+    <!--////////// LINKS-->
     <link rel="stylesheet" href="assets/SASS/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
-<body>
 
+<body>
+<!--///////////HEADER//////////-->
 <header>
     <div class="home-header">
         <nav class="navbar navbar-default">
@@ -72,13 +75,10 @@
             </div>
             <button class="btn btn-default"> ENROLL NOW</button>
         </div>
-
-
-
-
     </div>
 </header>
-
+<!--///////////////////////////-->
+<!--////////////CONTENT///////////-->
 <content>
     <!--////////// ABOUT SECTION//////////-->
     <div class="about-us">
@@ -565,8 +565,8 @@
         <div class="container">
             <div class="row">
                 <h3 class="text-center">RECENT EVENTS</h3>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="hidden-sm hidden-xs">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 hidden-sm hidden-xs">
+                    <div>
                         <img src="assets/images/annual-wordpress-event.png" alt="">
                     </div>
                     <div class="hidden-sm hidden-xs spacing">
@@ -580,7 +580,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-8 col-sm-offset-2 col-xs-12 hidden-md">
                     <div class="hidden-md">
                         <img src="assets/images/hybrid-app-dev-event.png" alt="">
                     </div>
@@ -595,8 +595,8 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                    <div class="hidden-sm hidden-xs">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 hidden-sm hidden-xs">
+                    <div>
                         <img src="assets/images/annual-freelance-event.png" alt="">
                     </div>
                     <div class="hidden-sm hidden-xs spacing">
@@ -615,7 +615,7 @@
     </div>
     <!--////// RECENT EVENTS SECTION END ///////-->
 </content>
-
+<!--///////////////////////////-->
 <!--///////////// FOOTER////////////////-->
 <footer>
     <!--MAP AND CONTACT SECTION-->
@@ -699,7 +699,5 @@ AppBakerZ+Pvt.+Ltd.!5e0!3m2!1sen!2s!4v1489401838963" width="100%" height="773" f
     </div>
 </footer>
 <!--//////////////FOOTER END//////////-->
-
-
 </body>
 </html>
