--- a/wordpressMeetup.html
+++ b/wordpressMeetup.html
@@ -23,8 +23,8 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#"><img src="assets/images/app-logo.png" class="logo-top" alt="AppBakerzLogo"/></a>
-                </div> <!--///// .navbar-header-->
 
+                </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#">HOME</a></li>
@@ -34,8 +34,8 @@
                         <li><a href="#">EVENTS</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
-                </div><!--/.nav-collapse -->
 
+                </div><!--/.nav-collapse -->
                 <div class="clock pull-right">
                     <img src="assets/images/clock-icon.png" alt=""/>
                     <p>Saturday - Sunday CLOSED<br>
@@ -44,7 +44,6 @@
                 </div>
             </div><!--/.container-fluid -->
         </nav>
-
         <div class="main-heading">
             <h1 class="container">wordpress annual <br> meetup 2017</h1>
         </div>
@@ -56,7 +55,9 @@
     <div class="about-us">
         <div class="container">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h3 class="container">EVENT INTRO</h3>
+                <h3 class="container">
+                    EVENT INTRO
+                </h3>
             </div>
             <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12 event-intro">
                 <p class="container simple-paragraph">
@@ -84,23 +85,26 @@
         <div class="row">
             <div class="container top-bottom">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <p class="text-uppercase">date</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <p class="text-uppercase">venue</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <p class="text-uppercase">time</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <p class="text-uppercase">date</p> <br>
                     <p class="text-uppercase-bold inline-block-elem caption">12 - JAN -2017</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <p class="text-uppercase">venue</p> <br>
                     <p class="text-uppercase-bold inline-block-elem caption">Hall 01 - Main Center <br> Karachi</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <p class="text-uppercase">time</p> <br>
                     <p class="text-uppercase-bold  inline-block-elem caption">6PM - 9PM</p>
                 </div>
+                <!--<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">-->
+                    <!--<p class="text-uppercase-bold inline-block-elem caption">12 - JAN -2017</p>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">-->
+                    <!--<p class="text-uppercase-bold inline-block-elem caption">Hall 01 - Main Center <br> Karachi</p>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">-->
+                    <!--<p class="text-uppercase-bold  inline-block-elem caption">6PM - 9PM</p>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
@@ -112,19 +116,19 @@
             <div>
                 <h1 class="text-center">EVENT GALLERY</h1>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <img src="assets/images/event-gallery-first.png" class="img-transform" alt="">
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                 <img src="assets/images/gallery-img-two.jpg" alt="">
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                 <img src="assets/images/gallery-img-three.jpg" alt="">
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                 <img src="assets/images/gallery-img-four.jpg" alt="">
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
                 <img src="assets/images/gallery-img-five.jpg" alt="">
             </div>
         </div>
