--- a/hybridAppsPage.html
+++ b/hybridAppsPage.html
@@ -64,6 +64,7 @@
                     we recieve fruitful results at the end. Here is a brief picture of what we do. This is why we receive fruitful results at the end. </p>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 div-two-nested front-end-development">
                     <img src="assets/images/special-development-icons-one.png" alt=""/>
+                    <!--<img src="assets/images/html5.png" alt="">+<img src="assets/images/css3.png" alt="">-->
                     <p class="caption">HTML5 + CSS3<br> DEVELOPMENT</p>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-4 col-xs-6 div-two-nested js-dev">
